[package]
name = "metrics-controller"
version = "0.1.0"
authors = ["thills <thills@mozilla.com", "russn <russn@mozilla.com"]


[dependencies]
chrono = "0.2.19"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
flate2 = "0.2.13"
hyper = "0.7.2"
uuid = "0.1.18"
time = "0.1"
timer = "0.1.6"
retry = "0.3.0"
sys-info = "0.4.1"
log = "0.3"
env_logger = "0.3.2"
lazy_static = "0.1.15"
telemetry = "0.1.1"

[dev-dependencies]
stainless = "*"
