[package]
name = "metrics-controller"
version = "0.1.2"
authors = ["thills <thills@mozilla.com", "russn <russn@mozilla.com"]
repository = "https://github.com/tamarahills/metrics_controller"
description = "Metrics Controller is a project to collect metrics for Mozilla IOT projects."
documentation = "http://russnicoletti.github.io/metrics_controller_docs/metrics_controller"
homepage = "https://github.com/tamarahills/metrics_controller/README.MD"
readme = "README.md"
keywords = ["metrics"]
license-file = "LICENSE"
exclude = [
  "*.dat",
  "*.lock",
  "js/*.js",
  "test/*.js",
  "vendor/*"
]


[dependencies]
chrono = "0.2.19"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
hyper = "0.7.2"
uuid = "0.1.18"
time = "0.1"
timer = "0.1.6"
retry = "0.3.0"
sys-info = "0.4.1"
log = "0.3"
env_logger = "0.3.2"
lazy_static = "0.1.15"
url = "1.1.0"

[dev-dependencies]
stainless = "0.1.4"

[features]
integration = []
