[package]
name = "metrics-controller"
version = "0.1.6"
authors = ["thills <thills@mozilla.com", "russn <russn@mozilla.com"]
repository = "https://github.com/tamarahills/metrics_controller"
description = "Metrics Controller is a project to collect metrics for Mozilla IOT projects."
documentation = "http://russnicoletti.github.io/metrics_controller_docs/metrics_controller"
homepage = "https://github.com/tamarahills/metrics_controller"
readme = "README.md"
keywords = ["metrics"]
license-file = "LICENSE"
exclude = [
  "*.dat",
  "*.lock",
  "js/*.js",
  "test/*.js",
  "vendor/*"
]

[lib]
name = "metrics_controller"
crate-type = ["dylib", "rlib"]

[dependencies]
chrono = "0.2.19"
serde = "0.8.9"
serde_json = "0.8.2"
serde_macros = "0.8.9"
hyper = "0.7.2"
uuid = "0.1.18"
time = "0.1"
timer = "0.1.6"
retry = "0.3.0"
log = "0.3"
env_logger = "0.3.2"
lazy_static = "0.1.15"
url = "1.1.0"

[dev-dependencies]
stainless = "0.1.4"

[features]
integration = []
